syntax = "proto3";

package user;

option go_package = "shared/proto/user;user";

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Logout(LogoutRequest) returns (LogoutResponse);
    rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
}

enum UserType {
    USER_TYPE_UNSPECIFIED = 0;
    DRIVER = 1;
    PASSENGER = 2;
}

message CreateUserRequest {
    string name = 1;
    string email = 2;
    string password = 3;
    UserType type = 4;
}

message CreateUserResponse {
    string id = 1;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string id = 1;
    string name = 2;
    string email = 3;
    string type = 4;
    string access_token = 5;
    string refresh_token = 6;
}

message LogoutRequest {
    string userID = 1;
}

message LogoutResponse {
    bool success = 1;
}

message RefreshTokenRequest {
    string token = 1;
}

message RefreshTokenResponse {
    string access_token = 1;
    string refresh_token = 2;
}

message User {
    string id = 1;
    string name = 2;
    string email = 3;
    string password_hashed = 4;
    UserType type = 5;
}